--- a/buildconf.yaml
+++ b/buildconf.yaml
@@ -1,44 +1,34 @@
-# Recommended information
-Authors:
-    - Matías Hurtado
-    - Pierre Padilla-Huamantinco
-
 Affiliation: Latin American Hub for Bioimaging Through Open Hardware (LIBRE hub)
-
-License: CERN-OHL-1.2
-
-Email: librehub@uc.cl
-
-
-#Uncomment below to add custom categories
+Authors:
+  - Matías Hurtado
+  - Pierre Padilla-Huamantinco
 CustomCategories:
-    PrintedPart:
-        Reuse: false
-        DisplayName: Printed Parts
-    PrintedTool:
-        Reuse: true
-        DisplayName: Printed Tools
-    LasercutPart:
-        Reuse: true
-        DisplayName: Laser cut Parts
-    Material:
-        Reuse: false
-        DisplayName: Materials
-    Consumable:
-        Reuse: false
-        DisplayName: Consumables
-    Optical:
-        Reuse: false
-        DisplayName: Optical Components
-    Electronic:
-        Reuse: false
-        DisplayName: Electronic Components
-    Mechanic:
-        Reuse: false
-        DisplayName: Mechanical Components
-
-DefaultCategory: Part
-
+  Consumable:
+    DisplayName: Consumables
+    Reuse: false
+  Electronic:
+    DisplayName: Electronic Components
+    Reuse: false
+  LasercutPart:
+    DisplayName: Laser cut Parts
+    Reuse: true
+  Material:
+    DisplayName: Materials
+    Reuse: false
+  Mechanic:
+    DisplayName: Mechanical Components
+    Reuse: false
+  Optical:
+    DisplayName: Optical Components
+    Reuse: false
+  PrintedPart:
+    DisplayName: Printed Parts
+    Reuse: false
+  PrintedTool:
+    DisplayName: Printed Tools
+    Reuse: true
+Email: librehub@uc.cl
+License: CERN-OHL-1.2
 Navigation:
   - Link: 2-level-station.md
     Title: Build the 2-level microscope station
@@ -46,25 +36,6 @@ Navigation:
     Title: Software Installation
   - Link: usage.md
     Title: Use your Station
- # - Link: customisation.md
- #   Title: Customisations and alternatives
-  - Link: troubleshooting.md
-    Title: Troubleshooting
-  - Link: knowledge_base.md
-    Title: Knowledge base
-
-
-#Uncomment below to set a custom default category
-#DefaultCategory: printedtool
-
-#Uncomment below to set the title for the bill of material on a page
-#PageBOMTitle: '##For this step you will need'
-
-#Uncomment below to override the project title
-#Title: 'My project'
-
-#Uncomment below to set a custom Website root for static HTML builds
-#WebsiteRoot: '/path/'
-
-#Uncomment below to disable fussy warnings
-#Fussy: False
+primaryColor: '#f1502f'
+secondaryColor: '#cccccc'
+hoverColor: '#555555'
